<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round_line_bg1"
    android:gravity="center_vertical|end"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_test_dev_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_test_dev_size"
        android:textColor="@color/color_theme"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_test_sus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_success_p"
        android:textColor="@color/color_green"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_test_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_fail_p"
        android:textColor="@color/color_red"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_test_fail_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_test_retry"
        android:textColor="@color/color_theme"
        android:background="@drawable/shape_round_line_bg2"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:textSize="12sp" />

</LinearLayout>