<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:background="@color/color_top_item"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/text_dev_name"
        android:textColor="@color/white1"
        android:textSize="14sp" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/color_gray1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.3"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/text_mac_address"
        android:textColor="@color/white1"
        android:textSize="14sp" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/color_gray1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/text_rssi"
        android:textColor="@color/white1"
        android:textSize="14sp" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/color_gray1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.8"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/text_xiang_qing"
        android:textColor="@color/white1"
        android:textSize="14sp" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/color_gray1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/text_result"
        android:textColor="@color/white1"
        android:textSize="14sp" />
</LinearLayout>