<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/text_pl_input"
            android:textColor="@color/text_color"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:textColor="@color/text_color"
            android:textSize="16dp"
            android:gravity="bottom"
            android:maxLines="1"
            android:ellipsize="end"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/color_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginTop="35dp"
            android:background="@color/color_gray1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel_text"
                android:textColor="@color/text_color"
                android:textSize="16dp" />

            <View
                android:layout_width="2px"
                android:layout_height="match_parent"
                android:background="@color/color_gray1" />

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/confirm_text"
                android:textColor="@color/text_color"
                android:textSize="16dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>